- Implemented issue #10941: Support for the Cancel Case workflow pattern.

- Implemented issue #12404: Separate file i/o from XML processing in
  ezcWorkflowDefinitionStorageXml.

1.1 - Monday 17 December 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added explicit calls to __toString() for PHP 5.1 compatiblity.
- Changed default value for the ezcWorkflowExecutionListener::notify() method's
  $type argument from self::INFO to ezcWorkflowExecutionListener::INFO to work
  around an issue in PHP 5.1's Reflection API that breaks the test suite.


1.1rc1 - Wednesday 05 December 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12144: Resuming from synchronization of parallel split fails.


1.1beta1 - Wednesday 28 November 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #11862: Allow arrays to have automatically generated keys.


1.1alpha1 - Monday 29 October 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added ezcWorkflowNodeLoop class to conveniently express loops.
- Refactored the XML definition storage:

  - DOM is now used for both the loading and saving of workflows (issue
    #10702).
  - The marshalling of the node configuration is now handled in the individual
    node classes. This makes it possible to have custom node classes handled by
    the XML definition storage.

- Default node configurations are handled better now.
- Implemented issue #10883: Apply comparison conditions to two variables.
- Implemented issue #10918: Error messages when loading invalid XML.
- Implemented issue #10985: Mapping variables between parent and sub workflows.
- Implemented issue #11003: Add ELSE option to exclusive choice.
- Fixed issue #11068: Implement ezcWorkflowExecution::hasVariable().


1.0.1 - Monday 30 July 2007