@@ -1,8 +1,8 @@
 digraph AddVariables {
-node1 [label="Start"]
-node2 [label="a = 1, b = 1"]
-node3 [label="b += a"]
-node4 [label="End"]
+node1 [label="Start", color="#2e3436"]
+node2 [label="a = 1, b = 1", color="#2e3436"]
+node3 [label="b += a", color="#2e3436"]
+node4 [label="End", color="#2e3436"]
 
 node1 -> node2
 node2 -> node3
