@@ -1,9 +1,9 @@
 digraph DecrementingLoop {
-node1 [label="Start"]
-node2 [label="i = 10"]
-node3 [label="Loop"]
-node4 [label="i--"]
-node5 [label="End"]
+node1 [label="Start", color="#2e3436"]
+node2 [label="i = 10", color="#2e3436"]
+node3 [label="Loop", color="#2e3436"]
+node4 [label="i--", color="#2e3436"]
+node5 [label="End", color="#2e3436"]
 
 node1 -> node2
 node2 -> node3
