@@ -1,12 +1,12 @@
 digraph ParallelSplitCancelCaseActionActionSynchronization {
-node1 [label="Start"]
-node2 [label=""]
-node3 [label="Parallel Split"]
-node4 [label="Cancel"]
-node5 [label="Synchronization"]
-node6 [label="End"]
-node7 [label=""]
-node8 [label=""]
+node1 [label="Start", color="#2e3436"]
+node2 [label="", color="#2e3436"]
+node3 [label="Parallel Split", color="#2e3436"]
+node4 [label="Cancel", color="#2e3436"]
+node5 [label="Synchronization", color="#2e3436"]
+node6 [label="End", color="#2e3436"]
+node7 [label="", color="#2e3436"]
+node8 [label="", color="#2e3436"]
 
 node1 -> node2
 node2 -> node3
