@@ -1,10 +1,10 @@
 digraph ParallelSplitSynchronization2 {
-node1 [label="Start"]
-node2 [label="Parallel Split"]
-node3 [label="Input"]
-node4 [label="Synchronization"]
-node5 [label="End"]
-node6 [label="Input"]
+node1 [label="Start", color="#2e3436"]
+node2 [label="Parallel Split", color="#2e3436"]
+node3 [label="Input", color="#2e3436"]
+node4 [label="Synchronization", color="#2e3436"]
+node5 [label="End", color="#2e3436"]
+node6 [label="Input", color="#2e3436"]
 
 node1 -> node2
 node2 -> node3
