@@ -1,11 +1,11 @@
 digraph SetAddSubMulDiv {
-node1 [label="Start"]
-node2 [label="x = 1"]
-node3 [label="x += 1"]
-node4 [label="x -= 1"]
-node5 [label="x *= 2"]
-node6 [label="x /= 2"]
-node7 [label="End"]
+node1 [label="Start", color="#2e3436"]
+node2 [label="x = 1", color="#2e3436"]
+node3 [label="x += 1", color="#2e3436"]
+node4 [label="x -= 1", color="#2e3436"]
+node5 [label="x *= 2", color="#2e3436"]
+node6 [label="x /= 2", color="#2e3436"]
+node7 [label="End", color="#2e3436"]
 
 node1 -> node2
 node2 -> node3
