@@ -1,5 +1,5 @@
 digraph StartEnd {
-node1 [label="Start", color="#2e3436"]
+node1 [label="Start", color="#204a87"]
 node2 [label="End", color="#2e3436"]
 
 node1 -> node2
