@@ -1,7 +1,7 @@
 digraph StartInputEnd {
-node1 [label="Start"]
-node2 [label="Input"]
-node3 [label="End"]
+node1 [label="Start", color="#2e3436"]
+node2 [label="Input", color="#2e3436"]
+node3 [label="End", color="#2e3436"]
 
 node1 -> node2
 node2 -> node3
