@@ -1,7 +1,7 @@
 digraph StartSetEnd {
-node1 [label="Start"]
-node2 [label="null = <null>, true = <true>, false = <false>, array = <array>, object = <stdClass>"]
-node3 [label="End"]
+node1 [label="Start", color="#2e3436"]
+node2 [label="null = <null>, true = <true>, false = <false>, array = <array>, object = <stdClass>", color="#2e3436"]
+node3 [label="End", color="#2e3436"]
 
 node1 -> node2
 node2 -> node3
