@@ -1,11 +1,11 @@
 digraph VariableEqualsVariable {
-node1 [label="Start"]
-node2 [label="a = 1, b = 1"]
-node3 [label="Exclusive Choice"]
-node4 [label="c = 1"]
-node5 [label="Simple Merge"]
-node6 [label="End"]
-node7 [label="c = 0"]
+node1 [label="Start", color="#2e3436"]
+node2 [label="a = 1, b = 1", color="#2e3436"]
+node3 [label="Exclusive Choice", color="#2e3436"]
+node4 [label="c = 1", color="#2e3436"]
+node5 [label="Simple Merge", color="#2e3436"]
+node6 [label="End", color="#2e3436"]
+node7 [label="c = 0", color="#2e3436"]
 
 node1 -> node2
 node2 -> node3
