@@ -1,7 +1,7 @@
 digraph WorkflowWithSubWorkflowParallelSplitActionActionCancelCaseSynchronization {
-node1 [label="Start"]
-node2 [label="Sub Workflow: ParallelSplitActionActionCancelCaseSynchronization"]
-node3 [label="End"]
+node1 [label="Start", color="#2e3436"]
+node2 [label="Sub Workflow: ParallelSplitActionActionCancelCaseSynchronization", color="#2e3436"]
+node3 [label="End", color="#2e3436"]
 
 node1 -> node2
 node2 -> node3
